--- a/_extensions/bitPublish/style.css
+++ b/_extensions/bitPublish/style.css
@@ -1,3 +1,6 @@
+/*##############################################################################
+## defind infobox 
+##############################################################################*/
 .infobox {
   padding: 1em 1em 0em 4.5em;
   margin-bottom: 5px;
@@ -29,8 +32,10 @@
 }
 
 
+/*##############################################################################
+## defind blockquote 
+##############################################################################*/
 /* https://codepen.io/jimmycow/pen/LmjVaz */
-
 .blockquote {
     padding: 60px 80px 40px;
     position: relative;
@@ -108,4 +113,219 @@
   font-weight: bold;
   margin-top:1em;
 }
+
+
+/*##############################################################################
+## defind titlebox 
+##############################################################################*/
+/* https://codepen.io/iPawan/pen/emrPKP */
+/* 
+// 12 - CSS3 Blockquote Effects Demo
+// Made with ❤ by @Pawan_Mall
+// http://www.pawanmall.net 
+*/
+
+@import url('https://fonts.googleapis.com/css?family=Montez');
+@import url(https://fonts.googleapis.com/css?family=Francois+One);
+
+body{
+  background: #f5f7fa;
+  margin:10px;
+  padding:10px;  
+}
+
+.titlebox{
+  display:block;
+  background: #fff;
+  padding: 15px 20px 15px 45px;
+  margin: 0 0 20px;
+  position: relative;
+  
+  /*Font*/
+  font-family: Noto Sans KR, serif;
+  font-size: 14px;
+  line-height: 1.2;
+  color: #666;
+
+  /*Box Shadow - (Optional)*/
+  -moz-box-shadow: 2px 2px 15px #ccc;
+  -webkit-box-shadow: 2px 2px 15px #ccc;
+  box-shadow: 2px 2px 15px #ccc;
+
+  /*Borders - (Optional)*/
+  border-left-style: solid;
+  border-left-width: 15px;
+  border-right-style: solid;
+  border-right-width: 2px;    
+}
+
+.titlebox::before{
+  content: "\201C"; /*Unicode for Left Double Quote*/
+  
+  /*Font*/
+  font-family: Noto Sans KR, serif;
+  font-size: 60px;
+  font-weight: bold;
+  color: #999;
+  
+  /*Positioning*/
+  position: absolute;
+  left: 10px;
+  top:5px;
+  
+}
+
+.titlebox::after{
+  /*Reset to make sure*/
+  content: "";
+}
+
+.titlebox a{
+  text-decoration: none;
+  background: #eee;
+  cursor: pointer;
+  padding: 0 3px;
+  color: #c76c0c;
+}
+
+.titlebox a:hover{
+ color: #666;
+}
+
+.titlebox em{
+  font-style: italic;
+}
+
+  /*Default Color Palette*/
+.titlebox.night{ 
+  border-left-color: #656d77;
+  border-right-color: #434a53;  
+}
+
+/*Grapefruit Color Palette*/
+.titlebox.grapefruit{
+  border-left-color: #ed5565;
+  border-right-color: #da4453;
+}
+
+/*Bittersweet Color Palette*/
+.titlebox.bittersweet{
+  border-left-color: #fc6d58;
+  border-right-color: #e95546;
+}
+
+/*Sunflower Color Palette*/
+.titlebox.sunflower{
+  border-left-color: #ffcd69;
+  border-right-color: #f6ba59;
+}
+
+/*Grass Color Palette*/
+.titlebox.grass{
+  border-left-color: #9fd477;
+  border-right-color: #8bc163;
+}
+
+/*Mint Color Palette*/
+.titlebox.mint{
+  border-left-color: #46cfb0;
+  border-right-color: #34bc9d;
+}
+
+/*Aqua Color Palette*/
+.titlebox.aqua{
+  border-left-color: #4fc2e5;
+  border-right-color: #3bb0d6;
+}
+
+/*Blue Jeans Color Palette*/
+.titlebox.bluejeans{
+  border-left-color: #5e9de6;
+  border-right-color: #4b8ad6;
+}
+
+/*Lavander Color Palette*/
+.titlebox.lavander{
+  border-left-color: #ad93e6;
+  border-right-color: #977bd5;
+}
+
+/*Pinkrose Color Palette*/
+.titlebox.pinkrose{
+  border-left-color: #ed87bd;
+  border-right-color: #d870a9;
+}
+
+/*Light Color Palette*/
+.titlebox.light{
+  border-left-color: #f5f7fa;
+  border-right-color: #e6e9ed;
+}
+
+/*Gray Color Palette*/
+.titlebox.gray{
+  border-left-color: #ccd1d8;
+  border-right-color: #aab2bc;
+}
+
+
+/* These CSS classes used just for Demo purpose */
+.heading{
+   font-family:Montez;
+   text-align:center;
+   font-size:30px;
+}
+code{
+  color:#da4453;
+}
+span{
+  font-weight:bolder;
+  
+}
+
+h1{
+  text-align:left;
+  font-size:16px;
+  font-family: 'Francois One', sans-serif;
+}
+
+span.Cnight{
+  color:#434a53;
+}
+span.Cgrapefruit{
+  color:#da4453;
+}
+span.Cbittersweet{
+  color:#e95546;
+}
+span.Csunflower{
+  color:#f6ba59;
+}
+span.Cgrass{
+  color:#8bc163;
+}
+span.Cmint{
+  color:#34bc9d;
+}
+span.Caqua{
+  color:#3bb0d6;
+}
+span.Cbluejeans{
+  color:#4b8ad6;
+}
+span.Clavander{
+  color:#977bd5;
+}
+span.Cpinkrose{
+  color:#d870a9;
+}
+span.Clight{
+  color:#e6e9ed;
+}
+span.Cgray{
+  color:#aab2bc;
+}
+
+
+
 
